--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <!-- <base href="/"> -->
-   <base href="https://hvannak.github.io/medivetattendanceweb/" />
+   <base href="/medivetattendanceweb/" />
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
